added JS for algolia search to all search bars

--- a/app/views/pages/_dashboard-purchases.html.erb
+++ b/app/views/pages/_dashboard-purchases.html.erb
@@ -69,7 +69,7 @@
 
 <% else %>
 
-<div class="dashboard-main-section">
+<div class="dashboard-main-section dashboard-hidden">
   <div class="no-dashboard-info-container">
     <p>You have no tickets<strong><%= @current_user.first_name.capitalize%></strong></p>
   </div>
