--- a/app/assets/stylesheets/components/_new_ticket_event.scss
+++ b/app/assets/stylesheets/components/_new_ticket_event.scss
@@ -71,9 +71,9 @@
 
 .algolia-autocomplete {
   flex-grow: 1;
-  padding-right: 20px;
   min-width: 200px;
   color: $black;
+  display: block !important;
 }
 
 //search results cards
