--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="add-navbar-padding">
   <div class="search-bar-query-container">
     <%= form_tag(events_path(params[:search]), method: 'get', class: 'events-search-bar') do %>
-      <%= text_field_tag :search, params[:search], placeholder: "Search by name / city / category...", class: "form-control", :onchange => "this.form.submit();"%>
+      <%= text_field_tag :search, params[:search], placeholder: "Search by name / city / category...", class: "form-control algolia-search", :onchange => "this.form.submit();"%>
     <% end %>
   </div>
 
@@ -95,8 +95,12 @@
   </div>
 </div>
 
-<%= javascript_pack_tag "event-index" %>
+<!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
+<script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 
+<%= javascript_pack_tag "event-index" %>
+<%= javascript_pack_tag "ticket-search" %>
 
 
 
