--- a/app/views/pages/_dashboard-watching.html.erb
+++ b/app/views/pages/_dashboard-watching.html.erb
@@ -82,7 +82,7 @@
 
 <% else %>
 
-<div class="dashboard-main-section">
+<div class="dashboard-main-section dashboard-hidden">
   <div class="no-dashboard-info-container">
     <p>You have no saved events <strong><%= @current_user.first_name.capitalize%></strong></p>
   </div>
