--- a/app/views/events/_list_form.html.erb
+++ b/app/views/events/_list_form.html.erb
@@ -46,7 +46,7 @@
 
     <div class="form-row">
       <div class="flex-row">
-        <%= t.input :description, label: 'Description', id: 'form-description' %>
+        <%= t.input :description, label: 'Description', placeholder: 'i.e. selling 2 tickets as a pair', id: 'form-description' %>
       </div>
     </div>
 
