--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -49,7 +49,7 @@
   color: white;
   text-align: center;
   background-size: cover !important;
-  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%);
+  // background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%);
   .banner-content-container {
     display: flex;
     justify-content: center;
@@ -60,22 +60,17 @@
     width: 500px;
   }
 }
-@media (min-width: 924px) {
-  .banner-venue{
-    padding: 110px 50px 50px 50px;
+.banner-venue{
     text-align: center;
-    color: white;
+    color: $green;
     opacity: 0.95;
     flex-grow: 1;
   }
+@media (min-width: 924px) {
+
 }
 @media (max-width: 923px) {
   .banner-venue{
-    padding: 110px 10px 50px 10px;
-    text-align: center;
-    color: white;
-    opacity: 0.95;
-    flex-grow: 1;
   }
 }
 
