--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -5,7 +5,7 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
-#search {
+.search {
   margin: 10px 0 20px 0;
   margin: auto;
   height: 50px;
