--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,35 +1,36 @@
-<div class="ticket-banner-container" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%), url(<%= cl_image_path @event.photo_file %> );">
-
+<div class="ticket-banner-container">
+  <!--  style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%), url(<%= cl_image_path @event.photo_file %> );" -->
   <div class="show-ticket-container">
     <div class="banner-venue">
-      <h1><%= @event.name %> @ <%= @venue %>, <%= @event.city %></h1>
-      <h4><%= @event.date_and_time.strftime('%a %d %b').upcase %></h4>
+      <h1><%= @event.name %></h1>
+      <h2><%= @venue %>, <%= @event.city %></h2>
+      <h3><%= @event.date_and_time.strftime('%a %d %b').upcase %></h3>
       <div class="available-tickets-text">
         <% if @event.quantity == 0 %>
-          <p>Sorry, there are no tickets currently available! </p>
+        <p>Sorry, there are no tickets currently available! </p>
         <% elsif @event.quantity == 1 %>
-          <p>Only <strong><%= @event.quantity %></strong> ticket remaining!</p>
+        <p>Only <strong><%= @event.quantity %></strong> ticket remaining!</p>
         <% else %>
-          <p>There are <strong><%= @event.quantity %></strong> tickets for this event remaining.</p>
+        <p>There are <strong><%= @event.quantity %></strong> tickets for this event remaining.</p>
         <% end %>
       </div>
 
       <% if @event.quantity == 0 %>
-        <p class="available-tickets-text">Bookmark the event to be notified when tickets are available</p>
+      <p class="available-tickets-text">Bookmark the event to be notified when tickets are available</p>
 
       <% else %>
-        <div class="container-upcoming-tickets">
-          <% @tickets.each do |ticket| %>
-            <!-- if the current user is the ticket lister, we display it but don't make it a link -->
-            <% if current_user != ticket.user %>
-              <%= link_to ticket_bookings_path(ticket.id), method: :post do %>
-                <%= render 'ticket_row', ticket: ticket, myclass: '' %>
-              <% end %>
-            <% else %>
-              <%= render 'ticket_row', ticket: ticket, myclass: 'own-ticket' %>
-            <% end %>
-          <% end %>
-        </div>
+      <div class="container-upcoming-tickets">
+        <% @tickets.each do |ticket| %>
+        <!-- if the current user is the ticket lister, we display it but don't make it a link -->
+        <% if current_user != ticket.user %>
+        <%= link_to ticket_bookings_path(ticket.id), method: :post do %>
+        <%= render 'ticket_row', ticket: ticket, myclass: '' %>
+        <% end %>
+        <% else %>
+        <%= render 'ticket_row', ticket: ticket, myclass: 'own-ticket' %>
+        <% end %>
+        <% end %>
+      </div>
       <% end %>
     </div>
 
