home page in progress

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -22,6 +22,7 @@
 $light-green: #A4E69A;
 $light-gray: #f4f4f4;
 $dark-gray: #7C898A;
+$navbar-gray: #262626;
 $black: rgb(0,0,0);
 $gray: #9C9C9C;
 $blue: #469AE0;
