--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,27 +6,41 @@
   .banner-content-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
+    padding-top: 100px;
     width: 100%;
     height: 100%;
   }
-  .banner-content {
-    width: 500px;
+}
+
+.banner-content {
+  #banner-typed-text, .typed-cursor {
+    font-size: 36px;
+    font-family: $headers-font;
+  }
+  h1 {
+  font-size: 72px;
+  color: $green;
+  font-weight: bold;
+  margin-bottom: 60px;
+  // text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+  a, a:hover {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 80px;
+    font-size: 48px;
+    z-index: 1;
+    text-decoration: none;
   }
 }
-.banner h1 {
-  font-size: 50px;
-  color: $light-green;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
+
 .banner p {
-  font-size: 30px;
+  font-size: 36px;
   font-weight: lighter;
   color: $light-green;
-}
-.banner-search{
-  display: relative;
 }
 #search-description {
   opacity: 0.7;
@@ -38,6 +52,7 @@
   width: 120px;
   border: none;
   height: 50px;
+  margin-left: 50px;
   &:hover{
     background-color: $light-green;
   }
