--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -13,3 +13,10 @@
   font-size: 22px;
   width: -webkit-fill-available;
 }
+.home-search {
+  margin: 100px;
+  .search-form {
+    display: inline-flex;
+    width: -webkit-fill-available;
+  }
+}
