--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,9 +4,9 @@
 
 // Define fonts for body and headers
 $body-font: "PT Sans", "sans-serif";
-$headers-font: 'Nunito Sans', sans-serif;
+$headers-font: 'PT Serif', sans-serif;
 h1, h2, h3, p {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'PT Serif', sans-serif;
 }
 
 // To use a font file (.woff) uncomment following lines
