--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -63,7 +63,6 @@
 .ticket-banner-container {
   color: white;
   text-align: center;
-  background-size: cover !important;
   // background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%);
   .banner-content-container {
     display: flex;
@@ -80,6 +79,7 @@
     color: $green;
     opacity: 0.95;
     flex-grow: 1;
+    height: 200px;
   }
 @media (min-width: 924px) {
 
