--- a/app/assets/stylesheets/components/_new_ticket_event.scss
+++ b/app/assets/stylesheets/components/_new_ticket_event.scss
@@ -126,12 +126,11 @@
 }
 .list-btn{
   border-radius: 6px;
-  background-color: $green;
+  background-color: #54BB94;
   color: #FFF;
   text-transform: uppercase;
-  width: 100px;
-  margin: 45px 0 0 auto;
-  right: 0px;
+  margin: 10px 0 0 auto;
+  right: 30px;
   line-height: 30px;
   font-size: 14px;
   text-align: center;
