--- a/app/views/events/_list_form.html.erb
+++ b/app/views/events/_list_form.html.erb
@@ -28,9 +28,6 @@
         <%= e.input :address, placeholder: 'Venue', label: 'Where', id: 'event_address' %>
       </div>
 
-
-
-
     <div class="form-row">
       <div class="form-70">
         <div class="flex-row">
@@ -50,7 +47,6 @@
       </div>
     </div>
 
-
     <div class="form-row">
       <div class="flex-row">
         <div class="photo-row">
@@ -61,11 +57,9 @@
 
   </div>
 
-
-
   <div class="btns-holder">
     <div class="done-btn">
-      <%= e.submit "List Ticket", class: 'done-btn' %>
+      <%= e.submit "Sell my ticket", class: 'done-btn' %>
     </div>
   </div>
 
