--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "unitix-navbar-logo.png", height: 70 %>
-    <%= image_tag "unitix_logo.png", class: 'unitix-logo-name', height: 30 %>
+    <span class="unitix-logo-name">UniTixHub</span>
   <% end %>
 
 
