--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,7 @@
+.home-page {
+  background-color: $white;
+}
+
 .banner {
   color: white;
   text-align: center;
@@ -57,7 +61,10 @@
     background-color: $light-green;
   }
 }
-
+.upcoming {
+}
+.popular-cities {
+}
 // Ticket Banner //
 
 .ticket-banner-container {
@@ -80,7 +87,7 @@
     color: $green;
     opacity: 0.95;
     flex-grow: 1;
-  }
+}
 @media (min-width: 924px) {
 
 }
