--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,7 @@
   padding: 30px 30px;
   color: rgba(0,0,0,0.3);
   max-height: 50px;
-  margin-top: 30px;
+  // margin-top: 30px;
 }
 .footer-links {
   display: flex;
