--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -8,15 +8,22 @@
 .search {
   margin: 10px 0 20px 0;
   margin: auto;
-  height: 50px;
+  height: 50px !important;
   color: $green;
   font-size: 22px;
   width: -webkit-fill-available;
 }
 .home-search {
-  margin: 100px;
+  background-color: $light-gray;
+  padding: 100px;
+  margin-top: 25px;
   .search-form {
     display: inline-flex;
     width: -webkit-fill-available;
   }
+  #search {
+    width: 100%;
+    height: 50px !important;
+  }
 }
+
