--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,13 +1,14 @@
-// Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,700");
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
+// // Import Google fonts
+@import url("https://fonts.googleapis.com/css?family=PT+Sans:400,700|Nobile:400,700");
 
 // Define fonts for body and headers
 $body-font: "PT Sans", "sans-serif";
-$headers-font: 'PT Serif', sans-serif;
+
+$headers-font: 'Nobile', sans-serif;
 h1, h2, h3, p {
-  font-family: 'PT Serif', sans-serif;
+  font-family: 'Nobile', sans-serif;
 }
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
