--- a/app/assets/stylesheets/components/_event_listings.scss
+++ b/app/assets/stylesheets/components/_event_listings.scss
@@ -1,5 +1,7 @@
 .search-bar-query-container{
-  padding: 50px 10px;
+  padding: 50px 0;
+  max-width: 900px;
+  margin: auto;
 }
 .container-header-section{
   padding: 20px 10px;
