cleaned up css for buy and sell tix page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="add-navbar-padding">
 
   <div class="search-bar-query-container">
-    <h1 class='buy-sell-tickets-header'>Find your event and cop a ticket in seconds</h1>
+    <h1 class='buy-sell-tickets-header'>Find your event, cop a ticket in seconds!</h1>
 
     <%= form_tag(events_path(params[:search]), method: 'get', class: 'events-search-bar') do %>
       <%= text_field_tag :search, params[:search], placeholder: "Search by name / city / category...", class: "form-control algolia-search search", :onchange => "this.form.submit();"%>
