--- a/app/assets/stylesheets/pages/_shared.scss
+++ b/app/assets/stylesheets/pages/_shared.scss
@@ -1,6 +1,6 @@
-// html, body {
-//   height: 100%; /*Fixes the height to 100% of the viewport*/
-// }
+html {
+  width: 100%;
+}
 // // body {
 // //   padding-top: 60px; /*50px for the height of the navbar + 37px for the offset*/
 // // }
