--- a/app/assets/stylesheets/pages/_sign-up.scss
+++ b/app/assets/stylesheets/pages/_sign-up.scss
@@ -54,6 +54,10 @@ body{
   padding: 15px 0 20px 20px;
 }
 
+.log-in-button-sing-up{
+  .padding-left: 10px;
+}
+
 .help-block{
   color: $dark-gray !important;
   font-size: 14px !important;
