--- a/app/views/pages/_dashboard_nav.html.erb
+++ b/app/views/pages/_dashboard_nav.html.erb
@@ -28,7 +28,7 @@
               </li>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete do %>
-                  <i class="fa fa-sign-out"></i>  Sign Out
+                   Sign Out
                 <% end %>
               </li>
             </ul>
@@ -50,7 +50,7 @@
               </li>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete do %>
-                  <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                    <%= t(".sign_out", default: "Log out") %>
                 <% end %>
               </li>
             </ul>
@@ -61,7 +61,6 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Help", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
@@ -88,7 +87,7 @@
           </li>
         <li>
           <%= link_to destroy_user_session_path, method: :delete do %>
-            <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+           <%= t(".sign_out", default: "Log out") %>
             <% end %>
         </li>
         <% else %>
