--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -53,10 +53,13 @@
 }
 .container-upcoming-tickets *:hover {
   text-decoration: none;
-  .fa-shopping-cart {
-    color: $black;
+  .fa-shopping-cart{
+    color: $green;
   }
 }
+
+
+
 @media (min-width: 923px){
   .container-upcoming-tickets{
     margin: 20px 20px;
