--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,11 @@
-<p>Welcome <%= @email %>!</p>
+<p> Hi <%= @email %></p>
+
+<p> Welcome to Unitix!</p>
+<p> We hope you enjoy your experience.</p>
 
 <p>You can confirm your account email through the link below:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p> Thank you,</p>
+<p> Unitixhub Team(Ben, Amresh & Cheryl) </p>
