--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,21 +1,34 @@
-<h2>Forgot your password?</h2>
-
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 <%= f.error_notification %>
 
 <div class="container">
   <div class="sign-up-container">
+    <div class="sign-up-text-container">
+      <h2 class='sign-up-text'> Reset Password </h2>
+    </div>
     <div class="form-inputs">
       <%= f.input :email, required: true, autofocus: true %>
     </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Send me reset password instructions" %>
+
+    <div class="form-row">
+      <div class="form-50">
+        <div class="form-actions" style="margin-left: 15px;">
+          <%= f.button :submit, "Reset password", class: "btn btn-primary" %>
+        </div>
+        <% end %>
+      </div>
+
+      <div class="form-50-log-in">
+        <div class="log-in-button-sing-up">
+        <%= render "devise/shared/links" %>
+      </div>
     </div>
-    <% end %>
   </div>
 </div>
-
-<div class="sign-up-forgot-password-link">
-  <%= render "devise/shared/links" %>
 </div>
+
+
+
+
+
