--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -3,7 +3,11 @@
     <div class="profile-header-section">
     </div>
     <div class="profile-avatar">
+      <% if current_user[:photo] != nil  %>
       <%= cl_image_tag current_user.photo, height: 300, width: 300, class: 'circle-border' %>
+      <% else %>
+      <%= cl_image_tag "student_avatar.png", height: 300, width: 300, class: 'circle-border' %>
+      <% end %>
       <p><%= link_to 'Change profile pic', edit_profile_pic_path, class:'small-edit-text-black' %></p>
     </div>
     <div class="profile-name text-center">
